--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,22 @@
 html {
   /* set basic font size to 4rem for rem */
   font-size: 4px;
-  font-weight: 400;
+  font-weight: 300;
+}
+
+input {
+  border: none !important;
+  outline: none !important;
+  appearance: none !important;
+  box-shadow: none !important;
+  background: transparent !important;
+  flex: 1;
+}
+
+input::focus {
+  border: none;
+  box-shadow: none;
+  appearance: none;
+  outline: none;
+  color: inherit;
 }
