--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@ html {
   /* set basic font size to 4rem for rem */
   font-size: 4px;
   font-weight: 300;
+  font-family: 'Exo', Courier, monospace;
 }
 
 /* clear default input style */
